--- a/style.css
+++ b/style.css
@@ -13,15 +13,27 @@ body {
     margin-top: 20px;
     color: #333;
   }
+
+  .container{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+  }
+
+  .subcontainer{
+    width: fit-content;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    align-items: center;
+  }
   
   input[type="text"],
   input[type="number"] {
-    padding: 10px;
-    margin: 10px;
+    padding: 10px 0;
     border: 1px solid #ddd;
     border-radius: 4px;
-    width: 300px;
-    max-width: 90%;
+    width: 100%;
   }
   
   button {
@@ -32,6 +44,7 @@ body {
     border-radius: 4px;
     cursor: pointer;
     font-size: 16px;
+    width: 100%;
   }
   
   button:hover {
