--- a/style.css
+++ b/style.css
@@ -91,4 +91,9 @@ body {
     border-top: 1px solid #ddd;
     margin: 10px 0;
   }
-  
+  .formContainer{
+    margin-top: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
